I brought C on a gunfight.
- Recursion is my superpower.
- Utilities seem to be fine, time for the good stuff..
- Implemented: Eratosthenes Prime Sieve, GCD algo [should have been in math.h],Mod exponentiation and Mod Inverse

--- a/encrypt-lib/src/Makefile
+++ b/encrypt-lib/src/Makefile
@@ -9,7 +9,7 @@ TARGET = encrypt_lib
 all: $(TARGET)
 
 $(TARGET): $(OBJFILES)
-	$(CC) $(CFLAGS) $(DBG) -o $(TARGET) $(OBJFILES)
+	$(CC) $(CFLAGS) $(DBG) -o $(TARGET) $(OBJFILES) -lm
 
 clean:
 	rm -f $(TARGET) *.o
